@startuml

title __LAB5.2's Class Diagram__\n

  namespace edu.miu.cs545.store {
    class edu.miu.cs545.store.SpringBootMVCApplication {
    }
  }
  

  namespace edu.miu.cs545.store {
    namespace controller {
      class edu.miu.cs545.store.controller.OrderController {
      }
    }
  }
  

  namespace edu.miu.cs545.store {
    namespace controller {
      class edu.miu.cs545.store.controller.ProductController {
      }
    }
  }
  

  namespace edu.miu.cs545.store {
    namespace domain {
      class edu.miu.cs545.store.domain.Order {
      }
    }
  }
  

  namespace edu.miu.cs545.store {
    namespace domain {
      class edu.miu.cs545.store.domain.OrderItem {
      }
    }
  }
  

  namespace edu.miu.cs545.store {
    namespace domain {
      enum OrderStatus {
      }
    }
  }
  

  namespace edu.miu.cs545.store {
    namespace domain {
      class edu.miu.cs545.store.domain.PaymentInfo {
      }
    }
  }
  

  namespace edu.miu.cs545.store {
    namespace domain {
      class edu.miu.cs545.store.domain.PersonalInfo {
      }
    }
  }
  

  namespace edu.miu.cs545.store {
    namespace domain {
      class edu.miu.cs545.store.domain.Product {
      }
    }
  }
  

  namespace edu.miu.cs545.store {
    namespace dto {
      class edu.miu.cs545.store.dto.OrderDTO {
      }
    }
  }
  

  namespace edu.miu.cs545.store {
    namespace dto {
      class edu.miu.cs545.store.dto.OrderItemDTO {
      }
    }
  }
  

  namespace edu.miu.cs545.store {
    namespace dto {
      class edu.miu.cs545.store.dto.PaymentInfoDTO {
      }
    }
  }
  

  namespace edu.miu.cs545.store {
    namespace dto {
      class edu.miu.cs545.store.dto.PersonalInfoDTO {
      }
    }
  }
  

  namespace edu.miu.cs545.store {
    namespace dto {
      class edu.miu.cs545.store.dto.ProductDTO {
      }
    }
  }
  

  namespace edu.miu.cs545.store {
    namespace exception {
      class edu.miu.cs545.store.exception.InsufficientStockAdvice {
      }
    }
  }
  

  namespace edu.miu.cs545.store {
    namespace exception {
      class edu.miu.cs545.store.exception.InsufficientStockException {
      }
    }
  }
  

  namespace edu.miu.cs545.store {
    namespace exception {
      class edu.miu.cs545.store.exception.NotFoundAdvice {
      }
    }
  }
  

  namespace edu.miu.cs545.store {
    namespace exception {
      class edu.miu.cs545.store.exception.OrderNotFoundException {
      }
    }
  }
  

  namespace edu.miu.cs545.store {
    namespace exception {
      class edu.miu.cs545.store.exception.ProductNotFoundException {
      }
    }
  }
  

  namespace edu.miu.cs545.store {
    namespace exception {
      class edu.miu.cs545.store.exception.ValidationExceptionHandler {
      }
    }
  }
  

  namespace edu.miu.cs545.store {
    namespace repository {
      interface edu.miu.cs545.store.repository.OrderRepository {
      }
    }
  }
  

  namespace edu.miu.cs545.store {
    namespace repository {
      interface edu.miu.cs545.store.repository.ProductRepository {
      }
    }
  }
  

  namespace edu.miu.cs545.store {
    namespace service {
      class edu.miu.cs545.store.service.OrderService {
      }
    }
  }
  

  namespace edu.miu.cs545.store {
    namespace service {
      class edu.miu.cs545.store.service.ProductService {
      }
    }
  }
  

  edu.miu.cs545.store.controller.OrderController o-- edu.miu.cs545.store.service.OrderService : orderService
  edu.miu.cs545.store.controller.ProductController o-- edu.miu.cs545.store.service.ProductService : productService
  edu.miu.cs545.store.domain.Order o-- edu.miu.cs545.store.domain.PaymentInfo : paymentInfo
  edu.miu.cs545.store.domain.Order o-- edu.miu.cs545.store.domain.PersonalInfo : personalInfo
  edu.miu.cs545.store.domain.Order o-- edu.miu.cs545.store.domain.OrderStatus : status
  edu.miu.cs545.store.domain.OrderItem o-- edu.miu.cs545.store.domain.Product : product
  edu.miu.cs545.store.dto.OrderDTO o-- edu.miu.cs545.store.dto.PaymentInfoDTO : paymentInfo
  edu.miu.cs545.store.dto.OrderDTO o-- edu.miu.cs545.store.dto.PersonalInfoDTO : personalInfo
  edu.miu.cs545.store.dto.OrderDTO o-- edu.miu.cs545.store.domain.OrderStatus : status
  edu.miu.cs545.store.dto.OrderItemDTO o-- edu.miu.cs545.store.dto.ProductDTO : product
  edu.miu.cs545.store.service.OrderService o-- edu.miu.cs545.store.repository.OrderRepository : orderRepository
  edu.miu.cs545.store.service.OrderService o-- edu.miu.cs545.store.repository.ProductRepository : productRepository
  edu.miu.cs545.store.service.ProductService o-- edu.miu.cs545.store.repository.ProductRepository : productRepository


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
